--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -15,13 +15,14 @@
   font-family: 'Roboto', sans-serif;
   font-size: 37px;
   color: #ffffff;
+  font-weight: bold;
  }
  .caixa-criar-quizz{
    width: 1052px;
    height: 181px;
    background-color: ;
    border-radius: 5px;
-   border: 10px dashed #D4D4D4;
+   border: 1px dashed #D4D4D4;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
@@ -34,6 +35,7 @@
   padding-bottom: 25px;
   font-size: 20px;
   text-align:center;
+
   
  }
 
