--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,8 +1,9 @@
 
- body{
+body{
   font-family: 'Roboto', sans-serif;
- }
- .topo{
+}
+
+.topo{
   width: 100%;
   height: 69px;
   background-color: #EC362D;
@@ -10,34 +11,42 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  margin-bottom: 77px;
- }
- .topo p{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 3;
+}
+
+.topo p{
   font-family: 'Roboto', sans-serif;
   font-size: 37px;
   color: #ffffff;
   font-weight: bold;
- }
- .caixa-criar-quizz{
+}
+
+.caixa-criar-quizz{
    width: 1052px;
    height: 181px;
    border-radius: 5px;
    border: 1px dashed #D4D4D4;
    margin: 0 auto;
+   margin-top: 146px;
+   margin-bottom: 77px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   margin-bottom: 77px;
- }
- .caixa-criar-quizz p{
+   
+}
+
+.caixa-criar-quizz p{
    color: #B9B9B9;
   padding-bottom: 25px;
   font-size: 20px;
   text-align:center; 
  }
 
- .botao-criar-quizz{
+.botao-criar-quizz{
    border: 1px dashed;
    border-radius: 50px;
    color: #EC362D;
@@ -46,8 +55,9 @@
    background-color: #ffffff;
    font-size: 21px;
    
- }
- .titulo{
+}
+
+.titulo{
     width: 1052px;
     margin: 0 auto;
     margin-bottom: 13px;
@@ -55,23 +65,31 @@
     justify-content: flex-start;
     align-items: center;
     
- }
- .titulo span{
+}
+
+.primeiro{
+    margin-top: 146px;
+
+}
+
+.titulo span{
     font-size: 20px;
     color: #000;
     font-weight: 700;
     margin-right: 12px;
- }
+}
 
- .titulo ion-icon{
+.titulo ion-icon{
     font-size: 31px;
     color: #EC362D;
   
- }
+}
 
+.titulo:first-of-class{
+    margin-top: 146px;
+}
 
-
- .todosQuiz, .seusQuiz{
+.todosQuiz, .seusQuiz{
     width:1052px;
     display: flex;
     flex-wrap: wrap;
@@ -100,7 +118,7 @@
     position: absolute;
     font-size: 19px;
     color:#ffffff;
-    z-index:4;
+    z-index:2;
     bottom: 7px;
     left: 18px;
 
@@ -113,14 +131,21 @@
 
 
 @media(max-width:600px){
-    .todosQuiz{
-        display: block;
-        width: auto;
+    .caixa-criar-quizz{
+        width: 80%;
+    }
+    .titulo{
+        width: 80%;
+    }
+
+    .todosQuiz, .seusQuiz{
+        width: 80%;
     }
 
     .quiz{
-        margin-bottom: 14px ;
-        margin-left: 17px;
-        margin-right: 17px;
+        width: 100%;
+    
     }
+
 }
+
