--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,6 +1,7 @@
 
 body{
   font-family: 'Roboto', sans-serif;
+  background-color: #fafafa;
 }
 
 .topo{
@@ -149,3 +150,95 @@ body{
 
 }
 
+
+
+/* TELA 3 */
+.comeco,.crie-perguntas,.niveis{
+    width: 600px;
+    margin: 0 auto;
+    margin-top: 140px;
+}
+
+.campos{
+    width: 600px;
+    padding: 20px;
+    margin-top: 24px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(0,0,0,0.05);
+}
+
+.comeco h1{
+    font-size: 23px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 48px;
+}
+
+.tela3 input{
+    width: 90%;
+    height: 46px;
+    border-radius: 5px;
+    border: 1px solid #d1d1d1;
+    font-size: 19px;
+    font-style: italic;
+    margin-bottom: 9px;
+}
+
+.tela3 input::placeholder{
+    color: #bababa;
+    text-indent: 10px;
+}
+
+.tela3 .botao {
+    width: 367px;
+    height: 54px;
+    margin: 0 auto;
+    margin-top: 85px;
+    font-size: 21px;
+    background-color: #EC362D;
+    color: #fff5f4;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.crie-perguntas h1,.niveis h1{
+    font-size: 23px;
+    font-size: 23px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 36px;
+}
+
+.tela3 span{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
+.perguntas,.resposta-correta,.resposta-incorreta,.alternativa-incorreta,.nivel{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.extra{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.titulo-input{
+    width: 90%;
+    text-align: start;
+    margin-bottom: 12px;
+}
