--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,7 +1,7 @@
 
 body{
   font-family: 'Roboto', sans-serif;
-  background-color: #fafafa;
+  background-color: #f8f8f8;
 }
 
 .topo{
@@ -168,7 +168,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: rgba(0,0,0,0.05);
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.05);
 }
 
 .comeco h1{
@@ -242,3 +242,5 @@ body{
     text-align: start;
     margin-bottom: 12px;
 }
+
+
