--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -113,6 +113,7 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    background-image: linear-gradient(rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 1));
 }
 
 .quiz .texto{
