adicionando verificações dos campos

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -113,7 +113,7 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 5px;
-    background-image: linear-gradient(rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 1));
+    background-image:linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
 }
 
 .quiz .texto{
@@ -294,7 +294,7 @@ body{
     margin-top: 140px;
 }
 
-.campos{
+.campos, .pergunta-completa{
     width: 600px;
     padding: 20px;
     margin-top: 24px;
@@ -378,4 +378,6 @@ body{
     margin-bottom: 12px;
 }
 
-
+#input-imgUrl:invalid{
+    
+}
