--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -294,7 +294,7 @@ body{
     margin-top: 140px;
 }
 
-.campos, .pergunta-completa{
+.campos{
     width: 600px;
     padding: 20px;
     margin-top: 24px;
@@ -378,4 +378,14 @@ body{
     margin-bottom: 12px;
 }
 
-
+.pergunta-completa{
+    width: 600px;
+    padding: 20px;
+    margin-top: 24px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.05);
+}
