--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -137,6 +137,16 @@ body{
 .banner img{
     width: 100%;
     height: 227px;   
+   
+}
+.banner:before{
+    content:'';
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background-color:rgba(0,0,0,.57);
 }
 .banner p{
     width:100%;    
@@ -149,6 +159,7 @@ body{
     display: flex;
     color: #ffffff;
     font-size: 39px;
+    
 }
 .caixa-de-perguntas{
     width: 759px;
@@ -162,8 +173,7 @@ body{
 }
 .pergunta-quizz{
     width: 688px;
-    height: 138px;
-    background-color: red;
+    height: 138px;    
     margin: 0 auto;
     display: grid;
     place-items: center;
@@ -188,7 +198,7 @@ body{
     margin-bottom: 6px;
 }
 
-.reposta{
+.resposta{
     margin-bottom: 18px;
     font-size: 20px;
     color: #000;
