--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -126,7 +126,7 @@ body{
 
 }
 .escondido{
-  display: none;
+  display: none !important;
 }
 /* ----tela 2------- */
 .banner{
@@ -357,7 +357,7 @@ body{
     margin-bottom: 12px;
 }
 
-.perguntas,.resposta-correta,.resposta-incorreta,.alternativa-incorreta,.nivel{
+.perguntas,.resposta-correta1,.resposta-correta2,.resposta-correta3,.resposta-correta4,.resposta-incorreta1,.resposta-incorreta2,.resposta-incorreta3,.resposta-incorreta4,.alternativa-incorreta,.nivel{
     width:100%;
     display: flex;
     flex-direction: column;
@@ -388,4 +388,11 @@ body{
     align-items: center;
     justify-content: center;
     box-shadow:0 0 10px rgba(0, 0, 0, 0.05);
+}
+
+.titulo-caixaPergunta{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
