--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -138,6 +138,9 @@ body{
 .banner img{
     width: 100%;
     height: 227px;   
+    object-fit:cover;
+    object-position:100% 30%;
+   
    
 }
 .banner:before{
