--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -365,3 +365,33 @@ body{
     font-size: 20px;
     margin-bottom: 12px;
 }
+
+.quizz-concluido{
+    width: fit-content;
+    margin: 0 auto
+}
+
+.img-quizzConcluido{
+    width: 500px;
+    height: 266px;
+    position: relative;
+    margin-top: 30px;
+}
+
+.img-quizzConcluido img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background-image:linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
+    object-fit:cover;
+    object-position:100% 30%;
+}
+
+.texto-quizzConcluido{
+    position: absolute;
+    font-size: 23px;
+    color:#ffffff;
+    z-index:2;
+    bottom: 7px;
+    left: 18px;
+}
